added sticky navigation

--- a/Tabbed Component/index.html
+++ b/Tabbed Component/index.html
@@ -13,6 +13,12 @@
         <h3 class="active">Tab1</h3>
         <h3>Tab2</h3>
         <h3>Tab3</h3>
+        <h3>Tab4</h3>
+        <h3>Tab5</h3>
+        <h3>Tab6</h3>
+        <h3>Tab7</h3>
+        <h3>Tab8</h3>
+        <h3>Tab9</h3>
       </div>
 
       <div class="tab-content">
@@ -27,6 +33,30 @@
         <div>
           <h4>Third tab</h4>
           <p>Content for Third tab</p>
+        </div>
+        <div>
+          <h4>Fourth tab</h4>
+          <p>Content for Fourth tab</p>
+        </div>
+        <div>
+          <h4>Fifth tab</h4>
+          <p>Content for Fifth tab</p>
+        </div>
+        <div>
+          <h4>Sixth tab</h4>
+          <p>Content for Sixth tab</p>
+        </div>
+        <div>
+          <h4>Seventh tab</h4>
+          <p>Content for Seventh tab</p>
+        </div>
+        <div>
+          <h4>Eighth tab</h4>
+          <p>Content for Eighth tab</p>
+        </div>
+        <div>
+          <h4>Nineth tab</h4>
+          <p>Content for Nineth tab</p>
         </div>
       </div>
     </div>
